--- a/ntalk/package.json
+++ b/ntalk/package.json
@@ -6,7 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.0.0",
+    "express": "3.4.7",
     "express-load": "1.1.8",
     "static-favicon": "~1.0.0",
     "morgan": "~1.0.0",
